avcodec_encode_audio2: Increase the audio buffer size.

Fixes Ticket1104

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>